--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
-Flask==2.0.1
-flask-wtf==1.0.0
-gunicorn==20.1.0
+Flask==2.2.5
+flask-wtf==1.1.1
+gunicorn==21.2.0
+Werkzeug==2.2.3
+itsdangerous==2.1.2
+click==8.1.3
